@@ -7,6 +7,9 @@ __thiscall void LuaEngine::RegisterClasses();
 "558bec535657682d010000":
 __thiscall bool LuaEngine::RunBundledScript(const char *path);
 
+"558bec6aff68????????64a1????????5083ec54a1????????33c58945??5657508d45??64a3????????8bd1":
+__thiscall char* LuaEngine::LuamodCMD(char * modname);
+
 "558bec6aff68????????64a1????????5083ec20535657a1????????33c5508d45??64a3????????8965??8b0d????????c745??0f000000":
 static __stdcall void LuaEngine::PostGameStart(unsigned int state);
 
